@@ -1,3 +1,8 @@
+2010-03-21  Stas Boukarev  <stassats@gmail.com>
+
+	* start-swank.lisp: New file for starting swank by simply loading
+	sbcl --load start-swank.lisp
+
 2010-03-19  Tobias C. Rittweiler <tcr@freebits.de>
 
 	* slime.el (slime-lisp-implementation-program): New connection
